syntax = "proto3";
package tgvalidatord;

import "currency.proto";

import "google/protobuf/timestamp.proto";

option java_package = "com.taurushq.sdk.protect.proto.v1";

message BusinessRule {
  uint64 id = 1;
  uint64 tenantId = 2;
  string currency = 3;

  // Deprecated. This field will be empty from v3.32. Use entityType and entityID instead.
  uint64 walletId = 4 [deprecated = true];

  string ruleKey = 5;
  string ruleValue = 6;
  string ruleGroup = 7;
  string ruleDescription = 8;
  string ruleValidation = 9;

  // Deprecated. This field will be empty from v3.32. Use entityType and entityID instead.
  uint64 addressId = 10 [deprecated = true];

  Currency currencyInfo = 11;

  // entityType indicates what this rule applies to. This can be one of `global`, `currency`, `wallet`, `address`, `exchange`, `exchange_account`, `tn_participant`.
  string entityType = 12 ;
  // entityID is the identifier of the affected entity. For wallets, addresses, and currencies this is their ID. For exchanges this is the exchange label. This field is blank for global rules.
  string entityID = 13;
}

message Rules {

  message Trail {
    uint64 id = 1;
    uint64 userId = 2;
    string externalUserId = 3;
    string action = 4;
    string comment = 5;
    google.protobuf.Timestamp date = 6;
  }

  string rulesContainer = 1;
  repeated RuleUserSignature rulesSignatures = 2;
  bool locked = 3;
  google.protobuf.Timestamp creationDate = 4;
  google.protobuf.Timestamp updateDate = 5;

  repeated Trail trails = 6;
}

message RuleUserSignature {
  string userId = 1;
  string signature = 2;
}
